[gd_scene load_steps=26 format=3 uid="uid://cce14l8qu55gs"]

[ext_resource type="Script" path="res://Scripts/mainMenu.gd" id="1_5ocp1"]
[ext_resource type="Texture2D" uid="uid://d0raqlu0vu6pq" path="res://Textures/frontOak.png" id="1_uyn6b"]
[ext_resource type="Texture2D" uid="uid://g4hogs7f0irg" path="res://Textures/faces/Oak/oak.png" id="2_ueq1b"]
[ext_resource type="Texture2D" uid="uid://dk2n3m6x1p3wn" path="res://Textures/faces/Oak/eyes1-Sheet-export.png" id="3_kb4xn"]
[ext_resource type="Script" path="res://Scripts/OakCharacter.gd" id="3_oobd2"]
[ext_resource type="Texture2D" uid="uid://bw12l2yhtbg4m" path="res://Textures/onlineMenus.png" id="5_lsjtw"]
[ext_resource type="Theme" uid="uid://blk8n50qhm4w5" path="res://Textures/textstyle.tres" id="6_fs7r5"]
[ext_resource type="Texture2D" uid="uid://8i0nk6at2q64" path="res://Textures/faces/Oak/oak-Sheet-mouth-export.png" id="7_vjg0j"]
[ext_resource type="Script" path="res://Scripts/nonButton.gd" id="8_uitqs"]
[ext_resource type="Texture2D" uid="uid://dvhi31nyt1rl1" path="res://Textures/messageBar2.png" id="9_ljapk"]

[sub_resource type="Gradient" id="Gradient_rgnky"]
offsets = PackedFloat32Array(0.079602, 0.139303, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.950249, 0.950249, 0.950249, 0.0497512, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gf41k"]
gradient = SubResource("Gradient_rgnky")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_er3f6"]

[sub_resource type="Gradient" id="Gradient_o5nn8"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.532338, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yd5ow"]
gradient = SubResource("Gradient_o5nn8")
use_hdr = true
fill_from = Vector2(0, 0.141)
fill_to = Vector2(0.841, -0.069)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0jste"]
light_mode = 1

[sub_resource type="Animation" id="Animation_e3fnd"]
resource_name = "Blink"
length = 1.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.1, 0.3, 0.4, 1, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 1, 2, 1, 3, 0]
}

[sub_resource type="Animation" id="Animation_ac18o"]
resource_name = "DoubleBlink"
length = 3.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.1, 0.3, 0.5, 1, 1.3, 1.5, 1.7, 1.9, 2, 2.6, 2.7, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 1, 2, 1, 0, 0, 3, 1, 2, 1, 3, 0]
}

[sub_resource type="Animation" id="Animation_xyaiy"]
resource_name = "Talk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8flw6"]
_data = {
"Blink": SubResource("Animation_e3fnd"),
"DoubleBlink": SubResource("Animation_ac18o"),
"Talk": SubResource("Animation_xyaiy")
}

[sub_resource type="Animation" id="Animation_6i6be"]
resource_name = "casual"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 2, 1, 2]
}

[sub_resource type="Animation" id="Animation_qe3yp"]
resource_name = "friend"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 13, 12, 11, 12]
}

[sub_resource type="Animation" id="Animation_qw6m1"]
resource_name = "ranked"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ranked:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 8, 7, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ge3x"]
_data = {
"casual": SubResource("Animation_6i6be"),
"friend": SubResource("Animation_qe3yp"),
"ranked": SubResource("Animation_qw6m1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joiew"]
size = Vector2(153.966, 49.1181)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_5ocp1")

[node name="BottomBar" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
texture_filter = 1
position = Vector2(479.991, 397.688)
rotation = -1.5708
scale = Vector2(4.52473, 15.0224)
texture = SubResource("GradientTexture2D_gf41k")

[node name="BottomBar2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
texture_filter = 1
position = Vector2(479.991, 144)
rotation = 1.5708
scale = Vector2(4.52473, 15.0224)
texture = SubResource("GradientTexture2D_gf41k")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(537, 7)
scale = Vector2(0.943, 1)
skew = 0.260054

[node name="txt" type="RichTextLabel" parent="Node2D"]
offset_left = -553.689
offset_top = -8.27835
offset_right = 146.311
offset_bottom = 291.722
scale = Vector2(0.7, 0.595)
mouse_filter = 2
theme = ExtResource("6_fs7r5")
theme_override_colors/default_color = Color(0.607843, 0.352941, 0.0705882, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 7
bbcode_enabled = true
text = "[center]Professor Oak's[/center]
"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="txt2" type="RichTextLabel" parent="Node2D"]
anchors_preset = -1
anchor_left = 0.207551
anchor_top = 0.309048
anchor_right = 0.207551
anchor_bottom = 0.309048
offset_right = 1000.0
offset_bottom = 300.0
scale = Vector2(0.554, 0.588)
mouse_filter = 2
theme = ExtResource("6_fs7r5")
theme_override_colors/default_color = Color(0.682353, 0.521569, 0.184314, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 7
theme_override_font_sizes/normal_font_size = 51
bbcode_enabled = true
text = "[center]Connection Center[/center]
"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="FrontOak" type="Sprite2D" parent="."]
modulate = Color(0.886275, 0.866667, 0.8, 1)
z_index = -10
texture_filter = 1
material = SubResource("CanvasItemMaterial_er3f6")
position = Vector2(479.778, 270)
scale = Vector2(0.500463, 0.500463)
texture = ExtResource("1_uyn6b")
metadata/_edit_lock_ = true

[node name="black2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.592157)
texture_filter = 1
position = Vector2(479, 31.657)
rotation = -1.5708
scale = Vector2(16.9961, 16.5776)
texture = SubResource("GradientTexture2D_yd5ow")

[node name="Oak" type="Sprite2D" parent="."]
modulate = Color(0.988235, 0.901961, 1, 1)
texture_filter = 6
material = SubResource("CanvasItemMaterial_0jste")
position = Vector2(-151, 295.18)
scale = Vector2(0.599, 0.599)
texture = ExtResource("2_ueq1b")
script = ExtResource("3_oobd2")

[node name="Eyes" type="Sprite2D" parent="Oak"]
texture = ExtResource("3_kb4xn")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Oak/Eyes"]
speed_scale = 6.0
libraries = {
"": SubResource("AnimationLibrary_8flw6")
}

[node name="Mouth" type="Sprite2D" parent="Oak"]
position = Vector2(0, 1.66946)
scale = Vector2(1, 1)
texture = ExtResource("7_vjg0j")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Oak/Mouth"]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_8flw6")
}

[node name="Oak" type="Sprite2D" parent="Oak"]
modulate = Color(0, 0, 0, 0.34902)
z_index = -1
texture_filter = 6
material = SubResource("CanvasItemMaterial_0jste")
position = Vector2(-6.67776, 11.3857)
texture = ExtResource("2_ueq1b")

[node name="casual" type="Sprite2D" parent="."]
position = Vector2(764.036, 116.875)
scale = Vector2(2.11735, 2.11735)
texture = ExtResource("5_lsjtw")
hframes = 15
frame = 2
script = ExtResource("8_uitqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="casual"]
speed_scale = 0.75
libraries = {
"": SubResource("AnimationLibrary_7ge3x")
}

[node name="shadow" type="Sprite2D" parent="casual"]
modulate = Color(0, 0, 0, 0.560784)
z_index = -1
position = Vector2(3.77829, 3.77831)
texture = ExtResource("5_lsjtw")
hframes = 15
metadata/_edit_lock_ = true

[node name="txt" type="RichTextLabel" parent="casual"]
light_mask = 0
anchors_preset = -1
anchor_left = 0.0909091
anchor_top = 0.0135725
anchor_right = 0.915584
anchor_bottom = 1.19725
offset_left = -77.0
offset_top = -13.6651
offset_right = -76.0
offset_bottom = -13.6651
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.529, 0.425)
mouse_filter = 2
theme = ExtResource("6_fs7r5")
theme_override_colors/default_color = Color(0, 0.215686, 0.333333, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Casual 
		Match[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="casual"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="casual/Area2D"]
z_index = 999
shape = SubResource("RectangleShape2D_joiew")
debug_color = Color(0.866667, 0, 0.854902, 0.419608)
metadata/_edit_lock_ = true

[node name="ranked" type="Sprite2D" parent="."]
position = Vector2(747.071, 234.875)
scale = Vector2(2.11735, 2.11735)
texture = ExtResource("5_lsjtw")
hframes = 15
frame = 6
script = ExtResource("8_uitqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ranked"]
speed_scale = 0.75
libraries = {
"": SubResource("AnimationLibrary_7ge3x")
}

[node name="shadow" type="Sprite2D" parent="ranked"]
modulate = Color(0, 0, 0, 0.560784)
z_index = -1
position = Vector2(3.77829, 3.77831)
texture = ExtResource("5_lsjtw")
hframes = 15
frame = 1
metadata/_edit_lock_ = true

[node name="txt" type="RichTextLabel" parent="ranked"]
offset_left = -117.6
offset_top = -12.2795
offset_right = 204.4
offset_bottom = 44.7205
scale = Vector2(0.529, 0.425)
mouse_filter = 2
theme = ExtResource("6_fs7r5")
theme_override_colors/default_color = Color(0.380392, 0.0313726, 0.137255, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Ranked
		Match[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="ranked"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ranked/Area2D"]
z_index = 999
shape = SubResource("RectangleShape2D_joiew")
debug_color = Color(0.866667, 0, 0.854902, 0.419608)
metadata/_edit_lock_ = true

[node name="friend" type="Sprite2D" parent="."]
position = Vector2(731.036, 352.125)
scale = Vector2(2.11735, 2.11735)
texture = ExtResource("5_lsjtw")
hframes = 15
frame = 13
script = ExtResource("8_uitqs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="friend"]
speed_scale = 0.75
libraries = {
"": SubResource("AnimationLibrary_7ge3x")
}

[node name="shadow" type="Sprite2D" parent="friend"]
modulate = Color(0, 0, 0, 0.560784)
z_index = -1
position = Vector2(3.77829, 3.77832)
texture = ExtResource("5_lsjtw")
hframes = 15
metadata/_edit_lock_ = true

[node name="txt" type="RichTextLabel" parent="friend"]
offset_left = -117.6
offset_top = -12.2795
offset_right = 204.4
offset_bottom = 44.7205
scale = Vector2(0.529, 0.425)
mouse_filter = 2
theme = ExtResource("6_fs7r5")
theme_override_colors/default_color = Color(0.290196, 0.168627, 0.0509804, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Friend
		Match[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="friend"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="friend/Area2D"]
z_index = 999
shape = SubResource("RectangleShape2D_joiew")
debug_color = Color(0.866667, 0, 0.854902, 0.419608)
metadata/_edit_lock_ = true

[node name="messages" type="Node2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-6.10352e-05, -43)

[node name="messageBar" type="Sprite2D" parent="messages"]
position = Vector2(480, 316)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_ljapk")
metadata/_edit_lock_ = true

[node name="message" type="RichTextLabel" parent="messages"]
offset_left = 47.0
offset_top = 488.0
offset_right = 2192.0
offset_bottom = 676.0
scale = Vector2(0.4, 0.4)
theme = ExtResource("6_fs7r5")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -7
theme_override_constants/outline_size = 28
theme_override_font_sizes/normal_font_size = 78
bbcode_enabled = true
text = "Test text."
scroll_active = false

[node name="black" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(479, 31.657)
rotation = -1.5708
scale = Vector2(16.9961, 16.5776)
texture = SubResource("GradientTexture2D_yd5ow")

[connection signal="input_event" from="casual/Area2D" to="casual" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="casual/Area2D" to="casual" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="casual/Area2D" to="casual" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="ranked/Area2D" to="ranked" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="ranked/Area2D" to="ranked" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="ranked/Area2D" to="ranked" method="_on_area_2d_mouse_exited"]
[connection signal="input_event" from="friend/Area2D" to="friend" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="friend/Area2D" to="friend" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="friend/Area2D" to="friend" method="_on_area_2d_mouse_exited"]
